<resources>
    <string name="app_name">PD Ultrasonic Classification</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_activity2">Activity2</string>
    <string name="AVG_LBL">Average:</string>
    <string name="STAN_DEV">Standard Deviation:</string>
    <string name="PLAY">Play Audio File</string>
    <string name="LOAD_DATA">Load Data</string>
    <string name="LOAD_DATA_TITLE">View Data</string>
    <string name="FILE_CHOOSER">File Chooser</string>
    <string name="RECORD">Record</string>
    <string name="CLASSIFICATION">Classification:</string>
    <string name="SAMPLE_RATE">Sample rate:</string>

    <string name="myAlphaNumeric">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_- </string>
    <string name="TIMEDATE"><![CDATA[Time & Date:]]></string>
    <string name="DATEFORMAT">HH:MM_YYYY-MM-DD</string>
    <string name="REFERENCE">Reference:</string>
    <string name="COUNTDOWN">10</string>
    <string name="COUNTDOWNLBL">Count down:</string>
    <string name="PLAYBACK">Playback</string>
    <string name="SAVEASBTN">Save as..</string>
    <string name="SAVEASDIFFBTN">Save as..</string>
    <string name="CERTAINTY">Certainty:</string>
</resources>
