<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/RECORD"
        android:id="@+id/btn_record_start"
        android:background="@drawable/circle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/COUNTDOWN"
        android:id="@+id/countDwn"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/COUNTDOWNLBL"
        android:id="@+id/textView"
        android:layout_alignTop="@+id/countDwn"
        android:layout_alignParentStart="true" />

    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:id="@+id/graph"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/playBackBtn"
        android:layout_below="@+id/countDwn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PLAYBACK"
        android:id="@+id/playBackBtn"
        android:enabled="true"
        android:onClick="playBackRecording"
        android:focusable="true"
        android:layout_above="@+id/btn_record_start"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SAVEASDIFFBTN"
        android:id="@+id/saveBtn"
        android:onClick="saveAs"
        android:layout_alignTop="@+id/playBackBtn"
        android:layout_alignParentEnd="true" />

</RelativeLayout>